--- a/index.html
+++ b/index.html
@@ -20,8 +20,8 @@
   <script src="/assets/libs/modelmagic-engine/js/editor.bundle.js"></script>
   <!-- javascript -->
   <script type="module">
-    import { test0 } from './../test0.js'
-    import { test1 } from './../test1.js'
+    import { test0 } from '/js/test0.js'
+    import { test1 } from '/js/test1.js'
 
     // modelmagic.editor('createUI')
     modelmagic.$on('ready',() => {
